# TSRT

./: .gitignore  BluePrint.txt  CMakeLists.txt  Dynamic_TSR.py  TSR2_GT.txt  TSR4_GT.txt  decompose_H_pose0.txt  decompose_H_pose1.txt  decompose_H_pose2.txt  decompose_H_pose3.txt  pnp_pose.txt  pose.py
GT_Backup/: TSR1_GT.txt
include/: Shape.h  cvEigenConverter.h  dat_tracker.hpp  staple_fhog.h  utility.h  visualizer.h  vtd.hpp
src/: TSRT.cpp  dat_tracker.cpp  staple_fhog.cpp  staple_tracker.cpp  utility.cpp  visualizer.cpp  vtd.cpp
vtd/: output_roadmark.csv  通过vnc连接vtd操作.doc
